healthcare-toolkit/v/3.0/connector-testpanel.adoc
= Connector Testing with TestPanel
:keywords: hl7, testpanel

link:http://hl7api.sourceforge.net/hapi-testpanel/[TestPanel] is an HL7 receiver, transmitter and message editor. It is free software distributed under the link:http://hl7api.sourceforge.net/license.html[MPL/GPL] licenses, and runs on Mac OSX, Linux, and Windows. Check the link:http://hl7api.sourceforge.net/hapi-testpanel/install.html[instructions for installing with WebStart], or the link:http://sourceforge.net/projects/hl7api/files/hapi-testpanel/[download page] for the latest application bundles.

Because the TestPanel can transmit HL7 messages to a listening application, you can use it to test your Mule flows which handle HL7. The following section provides an example of a simple flow tested with the TestPanel.

== Simple Example

In this example, you can:

* Build a simple Studio application to process the HL7 messages, then send responses
* Configure the TestPanel application to send and receive HL7 messages on specific ports
* Test that the setup works as intended

== Configuration and Illustration

The TestPanel uses the following default Host and Port configurations:

* To send HL7 messages – localhost, port 50609
* To listen for HL7 messages – localhost, port 51609

The diagram below illustrates the steps the  TestPanel and Mule take to process HL7 messages.

The TestPanel:

. Generates an HL7 message.
. Sends an HL7 message to the Mule application over port 50609.
. Receives an HL7 message.
. Anypoint Studio processes the HL7 message
. Sends an ACK reply (general acknowledge) to localhost port 51609 and transforms the original HL7 message to XML. Simultaneously, Mule stores the message on a file on the local filesystem.
. Receives the ACK reply.

image:testflow_diag.png[testflow_diag]

== Anypoint Studio Application

This example application performs the following actions:

* Listens for incoming HL7 messages
* when it receives a message, it sends an HL7 ACK message to the sending application
* Transforms the received message from ER7 to XML
* Writes the resulting XML to a text file

image:sampleflow.png[sampleflow]

The first building block is an link:/healthcare-toolkit/v/3.0/hl7-mllp[HL7 inbound endpoint], configured with the following parameters:

* *Host*: `localhost`
* *Port*: `50609`

After the HL7 inbound endpoint, an link:/mule-user-guide/v/3.8/all-flow-control-reference[All Flow Control] sends the HL7 message to two link:/mule-user-guide/v/3.8/cache-scope[Cache Scopes] for parallel processing.

In the `Send ACK` scope, link:/healthcare-toolkit/v/3.0/hl7-edi[HL7 EDI] processes the original HL7 message and generates an ACK message. Then, HL7 sends the ACK message to the originating application. The HL7 outbound endpoint has been configured with the following parameters:

* *Host*: `localhost`
* *Port*: `51609`


====  TestPanel Configuration

This section explains how to set up  TestPanel to work with this example.

TestPanel configuration involves the following tasks:

* Configuring the TestPanel to send a sample HL7 message to localhost port 50609
* Configuring the TestPanel to listen for incoming HL7 connections on localhost 51609
* Starting the listening port
* Sending a sample HL7 message
* Checking the listening port's Activity log for the ACK reply from Mule

To configure the TestPanel:

. In the *Sending Connections* pane to the right of HAPI TestPanel's main window, click the displayed `localhost` connection (see the mouse cursor in the image below). The application displays the *Outgoing Message Sender* pane for configuring outgoing connections.
+
image:outconf.png[outconf]
+
. At the *Outgoing Message Sender *pane, configure the following settings (highlighted above):
** *Host*: `localhost`
** *Port*: `50609`
. In the *Receiving Connections* pane to the right, click the displayed `localhost` connection. The application displays the *Incoming Message Receiver* pane, which is identical to the Outgoing Message Sender pane displayed above.
. At the *Incoming Message Receiver* pane, configure the following settings:
** *Host*: `localhost`
** *Port*: `51609`
. Click  *Start*  near the top of the *Incoming Message Receiver* pane. The TestPanel  starts listening for HL7 messages on the configured host and port.
. Click the *Messages* pane to the right of the application window. The application displays a predefined sample HL7 message (see image below).
+
image:messages.png[messages]
+
. Click the *Send* button near the top of the pane. The application sends the sample message once to the specified host and port. Mule receives the HL7 message, then returns an ACK message to the TestPanel.
. Click the `localhost` connection in the *Receiving Connections* pane, then check the *Activity* log for the HL7 response from Mule. The image below displays the HL7 ACK messages sent by Mule.
+
image:incoming-ack.png[incoming-ack]


== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]

